# luajit

./: .flake8rc  .gitignore  .luacheckrc  CMakeLists.txt  Makefile  Makefile.original
.github/: CONTRIBUTING.rst
.github/workflows/: exotic-builds-testing.yml  gnumake-builds-testing.yml  integration-tarantool-ecosystem.yml  integration-tarantool.yml  lint.yml  linux-aarch64.yml  linux-x86_64.yml  linux.yml  macos-m1.yml  macos-x86_64.yml  macos.yml  sanitizers-testing.yml  testing.yml  valgrind-testing.yaml  vanilla-luajit.yml
cmake/: FindLibUnwind.cmake
doc/: contact.html  ext_c_api.html  ext_ffi.html  ext_ffi_api.html  ext_ffi_semantics.html  ext_ffi_tutorial.html  ext_jit.html  ext_profiler.html  extensions.html  faq.html  install.html  luajit.html  running.html  status.html
dynasm/: dasm_arm64.h  dasm_arm64.lua  dasm_mips.lua  dasm_x86.h
etc/: luajit.pc.in
src/: CMakeLists.txt  Makefile  Makefile.dep  Makefile.dep.original  Makefile.original  lib_aux.c  lib_base.c  lib_bit.c  lib_ffi.c  lib_init.c  lib_io.c  lib_jit.c  lib_math.c  lib_misc.c  lib_package.c  lib_string.c  lib_table.c  lj_alloc.c  lj_api.c  lj_arch.h  lj_asm.c  lj_asm_arm.h  lj_asm_arm64.h  lj_asm_mips.h  lj_asm_ppc.h  lj_asm_x86.h  lj_bcread.c  lj_bcwrite.c  lj_carith.c  lj_ccall.c  lj_ccallback.c  lj_cconv.c  lj_cdata.c  lj_cdata.h  lj_cparse.c  lj_crecord.c  lj_crecord.h  lj_ctype.c  lj_ctype.h  lj_debug.c  (+82 more)
src/host/: buildvm.c  buildvm_lib.c  genlibbc.lua
src/jit/: bcsave.lua  dump.lua
src/profile/: ljp_memprof.c  ljp_memprof.h  ljp_symtab.c  ljp_symtab.h  ljp_write.c  ljp_write.h
test/: CMakeLists.txt  gh-4738-incorrect-result-tonumber64.test.lua  luajit-test-init.lua  misclib-memprof-lapi.test.lua
test/LuaJIT-debug-extensions-tests/: CMakeLists.txt  debug-extension-tests.py
test/LuaJIT-tests/: CMakeLists.txt  README.md
test/lua-Harness-tests/: 241-standalone.t  301-basic.t  303-package.t
test/tarantool-c-tests/: ASAN-mmap-instr.test.c  ASAN_malloc_realloc_free.test.c  CMakeLists.txt  asan-alloc-instrumentation.test.c  asan-mmap-instrumentation.test.c  lj-1087-vm-handler-call.test.c  lj-1168-unmarked-finalizer-tab.test.c  misclib-sysprof-capi.test.c
test/tarantool-tests/: ASAN-left-memory-miss.test.lua  ASAN-right-memory-miss.test.lua  ASAN-use-after-free.test.lua  CMakeLists.txt  fix-argv-handling.test.lua  fix-emit-rma.test.lua  gh-4199-gc64-fuse.test.lua  gh-4427-ffi-sandwich.test.lua  gh-6096-external-unwinding-on-arm64.test.lua  gh-6163-min-max.test.lua  gh-6227-bytecode-allocator-for-comparisons.test.lua  tap.lua  utils.lua  (+27 more)
tools/: luajit-parse-memprof
(+40 files in other folders)
